# arrow_serde_avro

./: Cargo.toml
src/: lib.rs  schema_conversion.rs
tests/: simple.rs  test.rs
