[package]
	edition = "2021"
	name = "arrow_serde_avro"
	version = "0.1.0"

[dependencies]
	arrow = "50"
	serde = "1"
	serde-transcode = "1"
	serde_arrow = { version = "0.10.0-rc.1", features = ["arrow-50"] }
	serde_avro_fast = { git = "https://github.com/Ten0/serde_avro_fast" }

	anyhow = "1"

[dev-dependencies]
	serde_derive = "1"
